@@ -1,5 +1,12 @@
 2009-11-19  Neil Williams  <linux@codehelp.co.uk>
 
+	* src/ebookui.c: Set the preference value for the
+	spell check menu item from GConf in create_window ().
+	* src/gpdftext.glade: Set the text area to have
+	default focus.
+
+2009-11-19  Neil Williams  <linux@codehelp.co.uk>
+
 	* src/ebookui.c: Add undo/redo support. (Closes: #2)
 	* src/ebookui.h: Add GTrashStacks for undo and redo.
 	* src/gpdftext.glade: Add buttons for undo and redo.
